[gd_scene load_steps=11 format=3 uid="uid://d0jir87b8t6ke"]

[ext_resource type="Script" uid="uid://nlkrkrdctj1w" path="res://scene/main.gd" id="1_brvut"]
[ext_resource type="Texture2D" uid="uid://da70gdxd3j5ex" path="res://texture/2b5973de39eb2644364dc0cc317f7dd3.jpg" id="1_itxqv"]
[ext_resource type="PackedScene" uid="uid://cfhspb6gfm050" path="res://scene/player.tscn" id="2_v0l8b"]
[ext_resource type="PackedScene" uid="uid://wjh7n1b3mo5n" path="res://enemy/enemy.tscn" id="3_wp4xf"]
[ext_resource type="AudioStream" uid="uid://dvqh7ow4msm7i" path="res://sound/game-background-359782.mp3" id="5_0ha60"]

[sub_resource type="PlaneMesh" id="PlaneMesh_v0l8b"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wp4xf"]
albedo_texture = ExtResource("1_itxqv")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_wp4xf"]
size = Vector3(20.2826, 5.74048, 0.243042)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_brvut"]

[sub_resource type="Curve3D" id="Curve3D_brvut"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 534.163, 0, 512.806, 0, 0, 0, 0, 0, 0, -511.369, 0, 512.573, 0, 0, 0, 0, 0, 0, -511.679, 0, -511.668, 0, 0, 0, 0, 0, 0, 512.532, 0, -512.124),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="main" type="Node3D"]
script = ExtResource("1_brvut")
mob_scene = ExtResource("3_wp4xf")
batch_count = 2

[node name="floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1100, 0, 0, 0, 1100, 0, 0, 0, 1100, 0, 0, 0)
mesh = SubResource("PlaneMesh_v0l8b")
surface_material_override/0 = SubResource("StandardMaterial3D_wp4xf")

[node name="wall" type="StaticBody3D" parent="." groups=["wall"]]
collision_layer = 17
collision_mask = 3

[node name="wall" type="CollisionShape3D" parent="wall"]
transform = Transform3D(59.9999, 0, 0, 0, 59.9999, 0, 0, 0, 59.9999, 1.09167, 142.214, -611.371)
shape = SubResource("BoxShape3D_wp4xf")

[node name="wall2" type="CollisionShape3D" parent="wall"]
transform = Transform3D(59.9999, 0, 0, 0, 59.9999, 0, 0, 0, 59.9999, 1.092, 142.214, 600)
shape = SubResource("BoxShape3D_wp4xf")

[node name="wall3" type="CollisionShape3D" parent="wall"]
transform = Transform3D(-2.62268e-06, 0, 59.9999, 0, 59.9999, 0, -59.9999, 0, -2.62268e-06, -610, 142.214, -5.93547)
shape = SubResource("BoxShape3D_wp4xf")

[node name="wall4" type="CollisionShape3D" parent="wall"]
transform = Transform3D(-2.62268e-06, 0, 59.9999, 0, 59.9999, 0, -59.9999, 0, -2.62268e-06, 610, 142.214, -5.935)
shape = SubResource("BoxShape3D_wp4xf")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(60, 0, 0, 0, 60, 0, 0, 0, 60, 0, 0, 0)
collision_mask = 3

[node name="floor" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0330876, 0)
shape = SubResource("WorldBoundaryShape3D_brvut")
debug_color = Color(0, 0, 1, 1)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="StaticBody3D"]
transform = Transform3D(0.0166667, 0, 0, 0, -7.28526e-10, 0.0166667, 0, -0.0166667, -7.28526e-10, 0, 8.73094, 0)

[node name="player" parent="." instance=ExtResource("2_v0l8b")]
transform = Transform3D(12.215, 0, 0, 0, 12.215, 0, 0, 0, 12.215, -6.45291, 3.6444, 153.095)
collision_mask = 3
stomp_bounce = 100.0
rotate_speed = 10.0

[node name="Marker3D" type="Marker3D" parent="player"]
transform = Transform3D(0.0818666, 0, 0, 0, 0.0423248, 0.0700767, 0, -0.0700767, 0.0423248, -0.284369, 16.9688, 12.0829)

[node name="pivot" type="Node3D" parent="player/Marker3D"]

[node name="Camera3D" type="Camera3D" parent="player/Marker3D/pivot"]
transform = Transform3D(1, 0, 0, 0, 0.979751, -0.200223, 0, 0.200223, 0.979751, 0, 0, -128.059)
size = 42.237

[node name="Label3D" type="Label3D" parent="player"]
unique_name_in_owner = true
transform = Transform3D(0.0818666, 0, 0, 0, 0.0564651, 0.0592776, 0, -0.0592776, 0.0564651, 0.070557, 3.51823, -0.0188904)
text = "score: 0"
font_size = 1387

[node name="enemyTimer" type="Timer" parent="."]

[node name="enemyPath3D" type="Path3D" parent="."]
curve = SubResource("Curve3D_brvut")

[node name="PathFollow3D" type="PathFollow3D" parent="enemyPath3D"]
transform = Transform3D(0.000222757, 0, 0.999994, 0, 0.999995, 0, -0.999992, 0, 0.000222757, 534.163, 0, 512.806)

[node name="labeltimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.730162, 0.683274, 0, -0.683274, 0.730162, 7.93616, 55.4112, 265.508)
text = "นายภานุวัชร์ นุ่นหลักคำ"
font_size = 3500

[node name="Label3D" type="Label3D" parent="Label3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.25989, -28.3836, -8.99396)
text = "663380289-3"
font_size = 3750

[node name="PlayerMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 330.979)

[node name="Kucuk-kurbaga-205928" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0ha60")

[connection signal="timeout" from="enemyTimer" to="." method="_on_enemytimer_timeout"]
[connection signal="timeout" from="labeltimer" to="." method="_on_labeltimer_timeout"]
